--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.18.1",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "react": "^19.0.0",
